第二次提交

--- a/EMapView0.2.0/app/src/main/res/layout/activity_main.xml
+++ b/EMapView0.2.0/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vessel"/>
+        <Button
+            android:id="@+id/draw4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vessel1"/>
+        <Button
+            android:id="@+id/draw5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DesSub"/>
     </LinearLayout>
 
     <!--<com.example.administrator.emapview.view.ViewTouch-->
